ingress/minikube-static-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
spec:
  ports:
    - port: 80
  selector:
    app: days-app
